--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 [theme]
-base="dark"
-primaryColor="#004a55"
-backgroundColor="#fafafa"
-textColor="#222"
-font="sans serif"
+base='light'
+primaryColor='#004a55'
+backgroundColor='#fafafa'
+textColor='#222'
+font='sans serif'
